Implement invoke based task to upload raw reports in a certain directory to s3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 awscli
 boto
 PyYAML
-#streamparse
-https://github.com/Parsely/streamparse/archive/master.zip
+streamparse
 filechunkio
+luigi
+invoke
