--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ boto
 PyYAML
 streamparse
 filechunkio
-luigi
+#luigi
+https://github.com/hellais/luigi/archive/feature/tmp_directory.zip
 invoke
 simplejson
 ansible
