Implement full_db_import task that dumps all files to database

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -11,6 +11,14 @@ aws_secret_access_key: PQj1olrsODjYtJOkJxuooLXI8z5ndtZQga6HzLjA
 hosts: 127.0.0.1:9092
 [postgres]
 local-tmp-dir: /tmp
+host: 127.0.0.1
+port: 5432
+database: ooni_api_db
+username: operator
+password: seCure
+table: metrics
 [spark]
 spark-submit: /usr/bin/spark-submit
 master: yarn-client
+[ooni]
+#bridge-db-path: s3n://ooni-private/bridge_reachability/bridge_db.json
