--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,35 @@
-boto
-ujson
-luigi
-PyYaml
-awscli
-mkdocs
-bs4
+awscli==1.11.13
+backports-abc==0.4
+beautifulsoup4==4.5.1
+boto==2.43.0
+botocore==1.4.70
+bs4==0.0.1
+certifi==2016.9.26
+click==6.6
+colorama==0.3.7
+docutils==0.12
+futures==3.0.5
+get==0.0.0
+Jinja2==2.8
+jmespath==0.9.0
+livereload==2.4.1
+lockfile==0.12.2
+luigi==2.3.3
+Markdown==2.6.7
+MarkupSafe==0.23
+mkdocs==0.16.0
+post==0.0.0
+public==0.0.0
+pyasn1==0.1.9
+python-daemon==2.1.2
+python-dateutil==2.6.0
+PyYAML==3.12
+query-string==0.0.0
+request==0.0.0
+rsa==3.4.2
+s3transfer==0.1.9
+setupfiles==0.0.13
+singledispatch==3.4.0.3
+six==1.10.0
+tornado==4.4.2
+ujson==1.35
